# Plasmid

./: CMakeLists.txt  README.md  dll_main.cpp
include/: api.h  data_exports.h  data_types.h  forward_declarations.h  function_exports.h
include/primordialis_data/: data_addresses.h  data_labels.h  function_declarations.h  resolve_data.h  resolve_functions.h
mod_src/: example_mod.cpp  test_mod.cpp
